# LogFusion

./: .gitignore  LICENSE  README.md  pyproject.toml
.logfusion/: project.yaml
config/: json-unknown-source.yaml  kafka.example.yaml  llm.example.yaml  model-detection.example.yaml  rules.example.json  sources.yaml  unknown-source.yaml
docs/: local-file-parser-mvp-design.md  local-file-parser-mvp-plan.md
logfusion/: __init__.py  __main__.py  active_runtime.py  baseline.py  cases.py  cli.py  config.py  console.py  correlation.py  detect.py  detection.py  evaluation.py  features.py  field_mapping.py  file_source.py  fusion.py  investigation.py  kafka_source.py  kafka_ueba.py  llm_generation.py  llm_provider.py  model_detection.py  models.py  orchestrator.py  parser_candidates.py  parser_contract.py  parser_registry.py  parser_runtime.py  parser_test_harness.py  parsers.py  pipeline.py  project.py  quality.py  quality_drift.py  raw_store.py  readiness.py  replay_compare.py  rules.py  schema.py  shadow_replay.py  (+3 more)
tests/: test_active_parser_runtime.py  test_baseline.py  test_baseline_cli.py  test_canonical_schema_v0.py  test_cases.py  test_cases_cli.py  test_cli.py  test_console.py  test_correlation.py  test_correlation_cli.py  test_detection.py  test_detection_cli.py  test_evaluation.py  test_evaluation_cli.py  test_features.py  test_features_cli.py  test_fusion.py  test_fusion_cli.py  test_generic_parser_runtime.py  test_investigation.py  test_kafka_cli.py  test_kafka_source.py  test_kafka_ueba.py  test_kafka_ueba_cli.py  test_llm_config.py  test_local_pipeline.py  (+23 more)
(+4 files in other folders)
